--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
+    "ejs": "^2.5.7",
+    "koa": "^2.4.1",
+    "koa-router": "^7.4.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13",
@@ -46,6 +50,7 @@
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
+    "memory-fs": "^0.4.1",
     "postcss-loader": "^2.0.9",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.1",
