--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa": "^2.4.1",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.3",
+    "sha1": "^1.1.1",
     "vue": "^2.5.13",
     "vue-meta": "^1.4.3",
     "vue-router": "^3.0.1",
